# japanese-crossword

./: CMakeLists.txt  README.md
include/: crossword_data.h  mainwindow.h
src/: crossword_data.cpp  mainwindow.cpp
